--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
     "cmdk": "^0.2.0",
+    "js-cookie": "^3.0.5",
     "lodash.debounce": "^4.0.8",
     "lodash.filter": "^4.6.0",
     "lodash.find": "^4.6.0",
@@ -52,6 +53,7 @@
     "zustand": "^4.4.4"
   },
   "devDependencies": {
+    "@types/js-cookie": "^3.0.6",
     "@types/lodash.debounce": "^4.0.9",
     "@types/lodash.filter": "^4.6.9",
     "@types/lodash.find": "^4.6.9",
